--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                                     </a>
                                 </div>
 
-                                <img src="./images/headerimg.png" alt="" class="hero-img">   
+                                <img src="../photo by mishaal ahed on unsplash.jpg" alt="" class="hero-img">   
+                                <!-- <img src="./images/headerimg.png" alt="" class="hero-img">    -->
                                 <h1 class="site-title"><a href="http://localhost:10004/" rel="home">lorem name </a></h1>
                          </div>  <!--hero-part-->
                         <div class="description-container">
